<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/login_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        android:text="@string/login_main_string"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:text="@string/login_secondary_string"/>

    <!-- TODO Add icon

    <ImageView-->
        <!--android:layout_width="90dp"-->
        <!--android:layout_height="90dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:src="@drawable/beehive_logo"/>-->

    <LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/progress_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"/>

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_button_text"/>

    </LinearLayout>


</LinearLayout>