<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24px"
        android:title="@string/home"
        app:showAsAction="ifRoom" />



    <item
        android:id="@+id/sponsors_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_24px"
        android:title="@string/sponsors"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/contacts_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_android_24px"
        android:title="@string/contacts"
        app:showAsAction="ifRoom" />
</menu>